# hegel

./: .gitignore  Cargo.toml  README.md
src/: lib.rs  main.rs
src/auth/: mod.rs  req.rs  resp.rs
src/common/: mod.rs
src/http/: mod.rs  req.rs  resp.rs
src/http/utils/: status_code.rs
